--- a/ahh.html
+++ b/ahh.html
@@ -12,9 +12,10 @@
     <a href="#home" class="w3-bar-item w3-button"><b>SHATTERED</b> GLASS</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#salary" class="w3-bar-item w3-button">Salary</a>
-      <a href="#consent" class="w3-bar-item w3-button">Consent</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#resources" class="w3-bar-item w3-button">Resources</a>
+      <a href="#health" class="w3-bar-item w3-button">Health</a>
+      <a href="#education" class="w3-bar-item w3-button">Education</a>
+      <a href="#education" class="w3-bar-item w3-button">Education</a>
     </div>
   </div>
 </div>
