--- a/ahh.html
+++ b/ahh.html
@@ -146,7 +146,7 @@
 <!-- End page content -->
 </div>
 
-<!-- Google Map -->
+<!-- Google Map 
 <div id="googleMap" class="w3-grayscale" style="width:100%;height:450px;"></div>
 
 <!-- Footer -->
@@ -170,6 +170,7 @@ function myMap()
   });
   marker.setMap(map);
 }
+  -->
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
 <!--
