--- a/ahh.html
+++ b/ahh.html
@@ -31,9 +31,9 @@
 <!-- Page content -->
 <div class="w3-content w3-padding" style="max-width:1564px">
 
-  <!-- Project Section -->
-  <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+  <!-- Resources Section -->
+  <div class="w3-container w3-padding-32" id="resources">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Resources</h3>
   </div>
 
   <div class="w3-row-padding">
