--- a/ahh.html
+++ b/ahh.html
@@ -92,7 +92,7 @@
 
   <!-- Salary Section -->
   <div class="w3-container w3-padding-32" id="salary">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculate Salary</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
     <p>A myriad of working women struggle in requesting an appropriate salary for the work that they are doing, due to the still unacceptably large wage gap that both disparishes womens' confidence and economic success. Use our tool to calculate what salary you should request for your area of expertise: Don't settle for less! 
     </p>
   </div>
