--- a/ahh.html
+++ b/ahh.html
@@ -15,7 +15,7 @@
       <a href="#resources" class="w3-bar-item w3-button">Resources</a>
       <a href="#health" class="w3-bar-item w3-button">Health</a>
       <a href="#education" class="w3-bar-item w3-button">Education</a>
-      <a href="#education" class="w3-bar-item w3-button">Education</a>
+      <a href="#stories" class="w3-bar-item w3-button">Stories</a>
     </div>
   </div>
 </div>
@@ -92,7 +92,7 @@
 
   <!-- Salary Section -->
   <div class="w3-container w3-padding-32" id="salary">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Calculate Salary</h3>
     <p>A myriad of working women struggle in requesting an appropriate salary for the work that they are doing, due to the still unacceptably large wage gap that both disparishes womens' confidence and economic success. Use our tool to calculate what salary you should request for your area of expertise: Don't settle for less! 
     </p>
   </div>
@@ -146,37 +146,7 @@
 <!-- End page content -->
 </div>
 
-<!-- Google Map 
-<div id="googleMap" class="w3-grayscale" style="width:100%;height:450px;"></div>
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
-
-<!-- Add Google Maps -->
-<script>
-function myMap()
-{
-  myCenter=new google.maps.LatLng(41.878114, -87.629798);
-  var mapOptions= {
-    center:myCenter,
-    zoom:12, scrollwheel: false, draggable: false,
-    mapTypeId:google.maps.MapTypeId.ROADMAP
-  };
-  var map=new google.maps.Map(document.getElementById("googleMap"),mapOptions);
-  var marker = new google.maps.Marker({
-    position: myCenter,
-  });
-  marker.setMap(map);
-}
-  -->
-</script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-<!--
-use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
 
 </body>
 </html>
