--- a/molly.html
+++ b/molly.html
@@ -98,7 +98,7 @@
   </div>
   <!-- Education Section -->
   <div class="w3-container w3-padding-32" id="education">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Consent</h3>
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Education</h3>
     <h5>What is a consent?</h5>
     <p>Consent is the unambiguous verbal agreement to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be taken away at any point. 
 
