--- a/ahh.html
+++ b/ahh.html
@@ -106,7 +106,7 @@
       <p><button class="w3-button w3-light-grey w3-block">Sign Up</button></p> <!--Add link to website-->
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="healthCare.jpg" alt="healthcare.gov" style="width:100%">
+      <img src="healthCare.png" alt="healthcare.gov" style="width:100%">
       <h3>healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
       <p>healthcare.gov allows you to find health care providers that take your insurence.</p>
