--- a/ahh.html
+++ b/ahh.html
@@ -101,7 +101,7 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="obamaCare.jpg" alt="Obama Care" style="width:100%">
       <h3>Obama Care</h3>
-      <p class="w3-opacity">sign up for health insurence.</p>
+      <p class="w3-opacity">Sign up for health insurence.</p>
       <p>Also known as the Affordable Care Act, this service allows people to access health insurence for as low as $50/mo.</p>
       <a href="https://www.healthcare.gov/" class="w3-button w3-light-grey w3-block">Sign Up</a> <!--Add link to website-->
     </div>
