--- a/ahh.html
+++ b/ahh.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <!-- Health Section -->
+    <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
     <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurence, find a health care provider,
@@ -103,28 +103,28 @@
       <h3>Obama Care</h3>
       <p class="w3-opacity">Sign up for health insurence.</p>
       <p>Also known as the Affordable Care Act, this service allows people to access health insurence for as low as $50/mo.</p>
-      <a href="https://www.healthcare.gov/" class="w3-button w3-light-grey w3-block">Sign Up</a> <!--Add link to website-->
+      <a href="https://www.healthcare.gov/" class="w3-button w3-light-grey w3-block">Sign Up</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="healthCare.png" alt="healthcare.gov" style="width:100%">
       <h3>healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
       <p>healthcare.gov allows you to find health care providers that take your insurence.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Learn More</button></p>
+      <a href="https://www.healthcare.gov/blog/finding-a-provider/" class="w3-button w3-light-grey w3-block">Learn More</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="nurx.jpg" alt="nurx" style="width:100%">
       <h3>Nurx</h3>
       <p class="w3-opacity">Birth control delivered to you.</p>
       <p>Find the birth control that works for you then get it perscribed and delivered to your door, all in the comfort of your own home.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Try it Out</button></p>
+      <a href="https://app.nurx.com/" class="w3-button w3-light-grey w3-block">Try it Out</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="plannedParenthood.jpg" alt="Planned Parenthood" style="width:100%">
       <h3>Planned Parenthood</h3>
       <p class="w3-opacity">Learn more about your health.</p>
       <p>Planned parenthood provides educational material on everything from sexual health, to mental health, to relationship health.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Learn More</button></p>
+      <a href="https://www.plannedparenthood.org/learn" class="w3-button w3-light-grey w3-block">Learn More</a> 
     </div>
   </div>
   <!-- Education Section -->
