--- a/ahh.html
+++ b/ahh.html
@@ -110,21 +110,21 @@
       <h3>healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
       <p>healthcare.gov allows you to find health care providers that take your insurence.</p>
-      <a href="https://www.healthcare.gov/blog/finding-a-provider/" class="w3-button w3-light-grey w3-block">Learn More</a>
+      <a href="https://www.healthcare.gov/blog/finding-a-provider/" target="_blank" class="w3-button w3-light-grey w3-block">Learn More</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="nurx.jpg" alt="nurx" style="width:100%">
       <h3>Nurx</h3>
       <p class="w3-opacity">Birth control delivered to you.</p>
       <p>Find the birth control that works for you then get it perscribed and delivered to your door, all in the comfort of your own home.</p>
-      <a href="https://app.nurx.com/" class="w3-button w3-light-grey w3-block">Try it Out</a>
+      <a href="https://app.nurx.com/" target="_blank" class="w3-button w3-light-grey w3-block">Try it Out</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="plannedParenthood.jpg" alt="Planned Parenthood" style="width:100%">
       <h3>Planned Parenthood</h3>
       <p class="w3-opacity">Learn more about your health.</p>
       <p>Planned parenthood provides educational material on everything from sexual health, to mental health, to relationship health.</p>
-      <a href="https://www.plannedparenthood.org/learn" class="w3-button w3-light-grey w3-block">Learn More</a> 
+      <a href="https://www.plannedparenthood.org/learn" target="_blank" class="w3-button w3-light-grey w3-block">Learn More</a>
     </div>
   </div>
   <!-- Education Section -->
