--- a/ahh.html
+++ b/ahh.html
@@ -121,6 +121,15 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="plannedParenthood.jpg" alt="Planned Parenthood" style="width:100%">
+      .crop {
+        height: 300px;
+        width: 400px;
+        overflow: hidden;
+      }
+      .crop img {
+        height: auto;
+        width: 400px;
+      }
       <h3>Planned Parenthood</h3>
       <p class="w3-opacity">Learn more about your health.</p>
       <p>Planned parenthood provides educational material on everything from sexual health, to mental health, to relationship health.</p>
