--- a/ahh.html
+++ b/ahh.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-    <!-- Health Section -->
+      <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
     <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurence, find a health care provider,
@@ -100,6 +100,15 @@
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="obamaCare.jpg" alt="Obama Care" style="width:100%">
+      .crop {
+        height: 300px;
+        width: 400px;
+        overflow: hidden;
+      }
+      .crop img {
+        height: auto;
+        width: 400px;
+      }
       <h3>Obama Care</h3>
       <p class="w3-opacity">Sign up for health insurence.</p>
       <p>Also known as the Affordable Care Act, this service allows people to access health insurence for as low as $50/mo.</p>
@@ -107,6 +116,15 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="healthCare.png" alt="healthcare.gov" style="width:100%">
+      .crop {
+        height: 300px;
+        width: 400px;
+        overflow: hidden;
+      }
+      .crop img {
+        height: auto;
+        width: 400px;
+      }
       <h3>healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
       <p>healthcare.gov allows you to find health care providers that take your insurence.</p>
@@ -114,6 +132,15 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="nurx.jpg" alt="nurx" style="width:100%">
+      .crop {
+        height: 300px;
+        width: 400px;
+        overflow: hidden;
+      }
+      .crop img {
+        height: auto;
+        width: 400px;
+      }
       <h3>Nurx</h3>
       <p class="w3-opacity">Birth control delivered to you.</p>
       <p>Find the birth control that works for you then get it perscribed and delivered to your door, all in the comfort of your own home.</p>
