--- a/ahh.html
+++ b/ahh.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-      <!-- Health Section -->
+        <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
     <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurence, find a health care provider,
@@ -100,14 +100,10 @@
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="obamaCare.jpg" alt="Obama Care" style="width:100%">
-      .crop {
-        height: 300px;
-        width: 400px;
-        overflow: hidden;
-      }
-      .crop img {
-        height: auto;
-        width: 400px;
+      div {
+      width:100px;
+      height:100px;
+      overflow:hidden;
       }
       <h3>Obama Care</h3>
       <p class="w3-opacity">Sign up for health insurence.</p>
@@ -116,14 +112,10 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="healthCare.png" alt="healthcare.gov" style="width:100%">
-      .crop {
-        height: 300px;
-        width: 400px;
-        overflow: hidden;
-      }
-      .crop img {
-        height: auto;
-        width: 400px;
+      div {
+      width:100px;
+      height:100px;
+      overflow:hidden;
       }
       <h3>healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
@@ -132,14 +124,10 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="nurx.jpg" alt="nurx" style="width:100%">
-      .crop {
-        height: 300px;
-        width: 400px;
-        overflow: hidden;
-      }
-      .crop img {
-        height: auto;
-        width: 400px;
+      div {
+      width:100px;
+      height:100px;
+      overflow:hidden;
       }
       <h3>Nurx</h3>
       <p class="w3-opacity">Birth control delivered to you.</p>
@@ -148,14 +136,10 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="plannedParenthood.jpg" alt="Planned Parenthood" style="width:100%">
-      .crop {
-        height: 300px;
-        width: 400px;
-        overflow: hidden;
-      }
-      .crop img {
-        height: auto;
-        width: 400px;
+      div {
+      width:100px;
+      height:100px;
+      overflow:hidden;
       }
       <h3>Planned Parenthood</h3>
       <p class="w3-opacity">Learn more about your health.</p>
