--- a/ahh.html
+++ b/ahh.html
@@ -101,14 +101,14 @@
       <img src="obamaCare.jpg" alt="Obama Care" height = "200">
       <h3>Obama Care</h3>
       <p class="w3-opacity">Sign up for health insurence.</p>
-      <p>Also known as the Affordable Care Act, this service allows people to access health insurence for as low as $50/mo.</p>
+      <p>The Affordable Care Act gives people access to low cost health insurence that does not discriminate against prexisting conditions.</p>
       <a href="https://www.healthcare.gov/" target="_blank" class="w3-button w3-light-grey w3-block">Sign Up</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="healthCare.png" alt="healthcare.gov" height = "200">
       <h3>healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
-      <p>healthcare.gov allows you to find health care providers that take your insurence.</p>
+      <p>healthcare.gov allows you to find health care providers that take your insurence and compare providers in your area.</p>
       <a href="https://www.healthcare.gov/blog/finding-a-provider/" target="_blank" class="w3-button w3-light-grey w3-block">Learn More</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
