--- a/ahh.html
+++ b/ahh.html
@@ -154,7 +154,18 @@
         <div class="w3-display-topleft w3-black w3-padding">Women of Color</div>
          <a href="#women_of_color" class="w3-bar-item w3-button">Women of Color</a>
     </div>
-    
+    <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Abortion</div>
+         <a href="#abortion" class="w3-bar-item w3-button">Abortion</a>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Domestic Violence</div>
+         <a href="#domestic_violence" class="w3-bar-item w3-button">Domestic Violence</a>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-display-topleft w3-black w3-padding">Workplace Harassment</div>
+         <a href="#workplace_harassment" class="w3-bar-item w3-button">Workplace Harassment</a>
+    </div>
     <div class="w3-container w3-padding-32" id="consent"><h5>What is <b>consent</b>?</h5>
     <p>Consent is the unambiguous verbal agreement to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be taken away at any point. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike. 
     </p>
@@ -175,6 +186,15 @@
     <div class="w3-container w3-padding-32" id="women_of_color"><h5><b>Women of color</b> face numerous hardships</h5>
       <p>white privilege kids</p>
   </div>
+  <div class="w3-container w3-padding-32" id="abortion"><h5>Do you want an<b>abortion</b> ?</h5>
+    <p>mo' baby mo' problems</p>
+</div>
+<div class="w3-container w3-padding-32" id="domestic_violencee"><h5><b>Domestic violence</b> toward women</h5>
+  <p>please don't do it thanks!</p>
+</div>
+<div class="w3-container w3-padding-32" id="workplace_harassment"><h5>many women are subject to<b>workplace harassment</b> </h5>
+  <p>Dear men: stop being dildos. I'd call you dicks, but you're too fake.</p>
+</div>
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
