--- a/ahh.html
+++ b/ahh.html
@@ -167,9 +167,11 @@
          <a href="#workplace_harassment" class="w3-bar-item w3-button">Workplace Harassment</a>
     </div>
     <div class="w3-container w3-padding-32" id="consent"><h5>What is <b>consent</b>?</h5>
-    <p>Consent is the unambiguous verbal agreement to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be taken away at any point. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike. 
+    <p>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
     </p>
-      <p>  In addition, it is important to highlight the “freely given” aspect of consent. </p>
+      <p>  In addition, it is important to highlight the <b>“freely given”</b> aspect of consent. If a person only agrees because they feel afraid or <b>pressured</b> into anything is not consent - they should never feel obligated to have sex or that they “owe” it to their partner. Legally, a person cannot give consent while <b>under the influence</b> of drugs or alcohol, and the best thing to do in these situations is to allow the intoxicated person to sleep it off instead of taking advantage of them in their vulnerable state.
+</p>
+  <p> Please stay safe! If your partner responds negatively if you decline their sexual advancements, or if they ignore your signs of discontent, then <b>they do not respect your consent</b>. We recommend discussing your boundaries and if they continue to disrespect you, remove yourself from the situation and cut ties with this person. <b>Your safety is more important</b> than their necessity to own your body. </p>
   </div>
     <div class="w3-container w3-padding-32" id="campus_assault"><h5>College Campus <b>sexual assault</b></h5>
       <p>there's a lot</p>
