--- a/ahh.html
+++ b/ahh.html
@@ -174,7 +174,7 @@
   <p> Please stay safe! If your partner responds negatively if you decline their sexual advancements, or if they ignore your signs of discontent, then <b>they do not respect your consent</b>. We recommend discussing your boundaries and if they continue to disrespect you, remove yourself from the situation and cut ties with this person. <b>Your safety is more important</b> than their necessity to own your body. </p>
   </div>
     <div class="w3-container w3-padding-32" id="campus_assault"><h5>College Campus <b>sexual assault</b></h5>
-      <p>there's a lot</p>
+      <p>The United States Department of Justice reports that frighteningly, 1 in 4 female undergraduates will be victim to some form of sexual assault before she receives her diploma. </p>
   </div>
   </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
