--- a/ahh.html
+++ b/ahh.html
@@ -122,7 +122,7 @@
       <img src="plannedParenthood.jpg" alt="Planned Parenthood" height = "200">
       <h3>Planned Parenthood</h3>
       <p class="w3-opacity">Learn more about your health.</p>
-      <p>Planned parenthood provides educational material on everything from sexual health, to mental health, to relationship health.</p>
+      <p>Planned Parenthood provides educational material on everything from sexual health, to mental health, to relationship health.</p>
       <a href="https://www.plannedparenthood.org/learn" target="_blank" class="w3-button w3-light-grey w3-block">Learn More</a>
     </div>
   </div>
