--- a/ahh.html
+++ b/ahh.html
@@ -101,7 +101,7 @@ body{
    <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
-    <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurence, find a health care provider,
+    <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurance, find a health care provider,
       get birth control delivered to your door, and learn more about every aspect of your health.
     </p>
   </div>
@@ -109,15 +109,15 @@ body{
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="obamaCare.jpg" alt="Obama Care" height = "200">
       <h3>Obama Care</h3>
-      <p class="w3-opacity">Sign up for health insurence.</p>
-      <p>The Affordable Care Act gives people access to low cost health insurence without discriminating against prexisting conditions.</p>
+      <p class="w3-opacity">Sign up for health insurance.</p>
+      <p>The Affordable Care Act gives people access to low cost health insurance without discriminating against prexisting conditions.</p>
       <a href="https://www.healthcare.gov/" target="_blank" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Sign Up</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="healthCare.png" alt="healthcare.gov" height = "200">
       <h3>Healthcare.gov</h3>
       <p class="w3-opacity">Find a doctor that works for you.</p>
-      <p>healthcare.gov allows you to find health care providers that take your insurence and compare providers in your area.</p>
+      <p>Healthcare.gov allows you access to health care providers that take your insurance and then compare providers in your area.</p>
       <a href="https://www.healthcare.gov/blog/finding-a-provider/" target="_blank" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Learn More</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
