--- a/ahh.html
+++ b/ahh.html
@@ -110,7 +110,7 @@ body{
       <img src="obamaCare.jpg" alt="Obama Care" height = "200">
       <h3>Obama Care</h3>
       <p class="w3-opacity">Sign up for health insurance.</p>
-      <p>The Affordable Care Act gives people access to low cost health insurance without discriminating against prexisting conditions.</p>
+      <p>The Affordable Care Act gives people access to low cost health insurance without discriminating against preexisting conditions.</p>
       <a href="https://www.healthcare.gov/" target="_blank" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Sign Up</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
