--- a/ahh.html
+++ b/ahh.html
@@ -124,7 +124,7 @@ body{
       <img src="nurx.jpg" alt="nurx" height = "200">
       <h3>Nurx</h3>
       <p class="w3-opacity">Birth control delivered to you.</p>
-      <p>Find the birth control that works for you then get it perscribed and delivered to your door, all in the comfort of your own home.</p>
+      <p>Find the birth control that works for you then get it prescribed and delivered to your door, all in the comfort of your own home.</p>
       <a href="https://app.nurx.com/" target="_blank" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Try it Out</a>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
