--- a/ahh.html
+++ b/ahh.html
@@ -46,7 +46,7 @@ body{
   </div>
 
   <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
+  <!--  <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Planned Parenthood</div>
         <img src="planned_parenthood.png" alt="Planned Parenthood" style="width:100%">
@@ -96,7 +96,7 @@ body{
         <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
         <img src="/w3images/house3.jpg" alt="House" style="width:99%">
       </div>
-    </div>
+    </div> -->
   </div>
    <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
