--- a/ahh.html
+++ b/ahh.html
@@ -239,7 +239,10 @@ body{
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
   </div>
-
+  
+<div class="w3-container w3-padding-32" id="stories">
+      <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Share Your Stories</h3>
+    </div>
   <!-- Contact Section -->
   <div class="w3-container w3-padding-32" id="contact">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
