--- a/ahh.html
+++ b/ahh.html
@@ -25,6 +25,7 @@ body{
       <a href="#health" class="w3-bar-item w3-button">Health</a>
       <a href="#education" class="w3-bar-item w3-button">Education</a>
       <a href="#stories" class="w3-bar-item w3-button">Stories</a>
+      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
 </div>
