--- a/ahh.html
+++ b/ahh.html
@@ -188,6 +188,8 @@ body{
 </p>
       <p> RAINN highlights that while a quarter of women are sexually assaulted in college, <b>70% of these crimes remain unreported</b> and of the mere 30% that are reported to the authorities, only 25% of these result in arrest. What is even more chilling is that many of those punished for this heinous crime receive minimal jail time, such as Brock Turner, the unapologetic Stanford rapist who spent three months in jail due to not only the judge’s concern for the criminal’s swim career, but society’s overall acceptance of sexual assault and rapists and the common practice of <b>victim-shaming</b>.  </p>
       <p> A history of incompetency and neglect on the part of the authorities creates a culture of distrust of the judicial system, which largely contributes to the number of unreported sexual assaults. </p>
+      <p> In addition, many people, both men and women alike, claim that if a woman were to dress promiscuously or put herself in a vulnerable position (i.e. get drunk), then she deserves the assault. The truth of the matter is that a woman’s body is entitled to no one but herself, and those that practice this victim-blaming promote the notion that women must exercise extreme precautions and limit their personal liberties to prevent men from taking advantage of them. 
+      </p>
     </div>
   </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
