--- a/ahh.html
+++ b/ahh.html
@@ -102,8 +102,8 @@ body{
    <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
-    <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurance, find a health care provider,
-      get birth control delivered to your door, and learn more about every aspect of your health.
+    <font size="-2"><p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurance, find a health care provider,
+      get birth control delivered to your door, and learn more about every aspect of your health. </font>
     </p>
   </div>
   <div class="w3-row-padding ">
