--- a/ahh.html
+++ b/ahh.html
@@ -102,8 +102,8 @@ body{
    <!-- Health Section -->
   <div class="w3-container w3-padding-32" id="health">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Health</h3>
-    <font size="-2"><p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurance, find a health care provider,
-      get birth control delivered to your door, and learn more about every aspect of your health. </font>
+    <p>There are many barriers that keep women from accessing proper healthcare, we aim to shatter those barriers. In this section you can sign up for health insurance, find a health care provider,
+      get birth control delivered to your door, and learn more about every aspect of your health.
     </p>
   </div>
   <div class="w3-row-padding ">
@@ -177,19 +177,21 @@ body{
          <a href="#workplace_harassment" class="w3-button w3-wide w3-light-grey w3-block w3-hover-pale-red">Workplace Harassment</a>
     </div>
     <div class="w3-container w3-padding-32" id="consent"><h5>What is <b>consent</b>?</h5>
-    <p>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
+    <font size="-2"><p>Consent is the <b>unambiguous verbal agreement</b> to participate in any sexual activity with other persons. Consent must be given freely, and once consent is given, it can be <b>taken away at any point</b>. To be more specific, consent applies to numerous aspects of physical intimacy:  kissing, touching, and intercourse, (as well as other displays of intimacy,) all require the approval of all participants; male, female, and non-binary alike.
     </p>
       <p>  In addition, it is important to highlight the <b>“freely given”</b> aspect of consent. If a person only agrees because they feel afraid or <b>pressured</b> into anything is not consent - they should never feel obligated to have sex or that they “owe” it to their partner. Legally, a person cannot give consent while <b>under the influence</b> of drugs or alcohol, and the best thing to do in these situations is to allow the intoxicated person to sleep it off instead of taking advantage of them in their vulnerable state.
 </p>
   <p> Please stay safe! If your partner responds negatively if you decline their sexual advancements, or if they ignore your signs of discontent, then <b>they do not respect your consent</b>. We recommend discussing your boundaries and if they continue to disrespect you, remove yourself from the situation and cut ties with this person. <b>Your safety is more important</b> than their necessity to own your body. </p>
-  </div>
+      </font>
+      </div>
     <div class="w3-container w3-padding-32" id="campus_assault"><h5>The lack of security and awareness surrounding <b>sexual assault on college campuses</b> only feeds into this toxic rape culture.</h5>
-      <p>The United States Department of Justice reports that frighteningly,<b> 1 in 4 female undergraduates </b> will be victim to some form of <b>sexual assault</b> before she receives her diploma. While receiving education and learning how to empower and make a life for herself, 25% of women are forced into the submissive roles that plagued women centuries ago in this <b> apparently progressive nation and era </b>. Due to the egregious amount of non-consensual sex in college campuses, an increase in awareness and urgency is necessary to both help and limit the number of victims, as well as ensure that the offenders are served with <b>appropriate jail time</b>. 
+     <font size="-2"> <p>The United States Department of Justice reports that frighteningly,<b> 1 in 4 female undergraduates </b> will be victim to some form of <b>sexual assault</b> before she receives her diploma. While receiving education and learning how to empower and make a life for herself, 25% of women are forced into the submissive roles that plagued women centuries ago in this <b> apparently progressive nation and era </b>. Due to the egregious amount of non-consensual sex in college campuses, an increase in awareness and urgency is necessary to both help and limit the number of victims, as well as ensure that the offenders are served with <b>appropriate jail time</b>. 
 </p>
       <p> RAINN highlights that while a quarter of women are sexually assaulted in college, <b>70% of these crimes remain unreported</b> and of the mere 30% that are reported to the authorities, only 25% of these result in arrest. What is even more chilling is that many of those punished for this heinous crime receive minimal jail time, such as Brock Turner, the unapologetic Stanford rapist who spent three months in jail due to not only the judge’s concern for the criminal’s swim career, but society’s overall acceptance of sexual assault and rapists and the common practice of <b>victim-shaming</b>.  </p>
       <p> A history of <b>incompetency and neglect</b> on the part of the authorities creates a culture of<b> distrust of the judicial system</b>, which largely contributes to the number of unreported sexual assaults. 
       In addition, many people, both men and women alike, claim that if a woman were to <b> dress promiscuously</b> or put herself in a vulnerable position (i.e. get drunk), then she deserves the assault. The truth of the matter is that <b>a woman’s body is entitled to no one but herself</b>, and those that practice this victim-blaming promote the notion that women must exercise extreme precautions and <b>limit their personal liberties</b> to prevent men from taking advantage of them. 
       </p>
+      </font>
     </div>
   </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
