--- a/ahh.html
+++ b/ahh.html
@@ -195,7 +195,7 @@ body{
     </div>
   </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
-      <p>it is real</p>
+      <p>While widely repudiated by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. l</p>
   </div>
   </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
