--- a/ahh.html
+++ b/ahh.html
@@ -189,13 +189,13 @@ body{
 </p>
       <p> RAINN highlights that while a quarter of women are sexually assaulted in college, <b>70% of these crimes remain unreported</b> and of the mere 30% that are reported to the authorities, only 25% of these result in arrest. What is even more chilling is that many of those punished for this heinous crime receive minimal jail time, such as Brock Turner, the unapologetic Stanford rapist who spent three months in jail due to not only the judge’s concern for the criminal’s swim career, but society’s overall acceptance of sexual assault and rapists and the common practice of <b>victim-shaming</b>.  </p>
       <p> A history of <b>incompetency and neglect</b> on the part of the authorities creates a culture of<b> distrust of the judicial system</b>, which largely contributes to the number of unreported sexual assaults. 
-      In addition, many people, both men and women alike, claim that if a woman were to <b> dress promiscuously</b> or put herself in a vulnerable position (i.e. get drunk), then she deserves the assault. The truth of the matter is that <b>a woman’s body is entitled to no one but herself</b>, and those that practice this victim-blaming promote the notion that women must exercise extreme precautions and <b>limit their personal liberties</b> to prevent men from taking advantage of them. While several statistics prove the existence of the wage gap, ignorance continues to depreciate these hard facts. 
+      In addition, many people, both men and women alike, claim that if a woman were to <b> dress promiscuously</b> or put herself in a vulnerable position (i.e. get drunk), then she deserves the assault. The truth of the matter is that <b>a woman’s body is entitled to no one but herself</b>, and those that practice this victim-blaming promote the notion that women must exercise extreme precautions and <b>limit their personal liberties</b> to prevent men from taking advantage of them.  
       </p>
       </font>
     </div>
   </div>
     <div class="w3-container w3-padding-32" id="wage_gap"><h5>Is the <b>Wage Gap</b> real?</h5>
-      <p>While widely repudiated by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. l</p>
+      <p>While widely repudiated by self-proclaiming “meninists” and “anti-feminists”, the wage gap continues to antagonize working women across the nation, ensuring that no matter their worth ethic and perseverance, they will still make <b>78 cents to the man’s dollar</b>. While several statistics <b> prove the existence of the wage gap</b>, ignorance continues to depreciate these hard facts. </p>
   </div>
   </div>
     <div class="w3-container w3-padding-32" id="trans_women"><h5>The struggles and inequalities that many <b>trans women</b> face</h5>
